--- a/Windows Desktop/VisualCrypt.Desktop/Views/EncryptedBar.xaml
+++ b/Windows Desktop/VisualCrypt.Desktop/Views/EncryptedBar.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:language="clr-namespace:VisualCrypt.Language;assembly=VisualCrypt.Language"
+             
              xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
              xmlns:viewModels="clr-namespace:VisualCrypt.Applications.ViewModels;assembly=VisualCrypt.Applications"
              mc:Ignorable="d"
@@ -37,16 +37,16 @@
         <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <TextBlock>
                 <Hyperlink Click="Hyperlink_CopyAll_Click">
-                    <Run Text="{Binding Source={x:Static language:Loc.Strings},Path=termCopyToClipboard,Mode=OneWay}" />
+                    <Run Text="{Binding ResourceWrapper.termCopyToClipboard,Mode=OneWay}" />
                 </Hyperlink>
                 <Run xml:space="preserve" />
                 <Hyperlink Click="Hyperlink_Decrypt_Click">
-                    <Run Text="{Binding Source={x:Static language:Loc.Strings},Path=termDecrypt,Mode=OneWay}" />
+                    <Run Text="{Binding ResourceWrapper.termDecrypt,Mode=OneWay}" />
                 </Hyperlink>
                 <Run xml:space="preserve" />
                 <Hyperlink Click="Hyperlink_Save_Click"
                            IsEnabled="{Binding FileModel.IsDirty}">
-                    <Run Text="{Binding Source={x:Static language:Loc.Strings},Path=termSave,Mode=OneWay}" />
+                    <Run Text="{Binding ResourceWrapper.termSave,Mode=OneWay}" />
                 </Hyperlink>
                 <Run xml:space="preserve" />
             </TextBlock>
