--- a/Windows Desktop/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
+++ b/Windows Desktop/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
@@ -4,7 +4,7 @@
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
-                    xmlns:language="clr-namespace:VisualCrypt.Language;assembly=VisualCrypt.Language"
+                    
                     xmlns:controls="clr-namespace:VisualCrypt.Desktop.Controls"
                     mc:Ignorable="d"
                     Title="Set Password" Height="300" Width="500" WindowStartupLocation="CenterOwner"
@@ -39,15 +39,21 @@
                                  VerticalScrollBarVisibility="Visible"
                                  AcceptsReturn="True"
                                  Height="70" MaxHeight="70" />
-                        <TextBlock>
+                        <DockPanel HorizontalAlignment="Stretch">
+                        <TextBlock HorizontalAlignment="Left">
                             <Hyperlink Click="Hyperlink_CreatePassword_OnClick">Generate Password</Hyperlink>
                             from 256 Bit Random Data.
                         </TextBlock>
+                            <TextBlock HorizontalAlignment="Right">
+                            <Hyperlink Click="Hyperlink_Print_Password_Click">Print Password</Hyperlink>
+                          
+                            </TextBlock>
+                        </DockPanel>
                         <TextBlock />
                         <TextBlock>
                             Read more about
                             <Hyperlink
-                                ToolTip="{Binding Source={x:Static language:Loc.Strings},Path=.uriPWSpecUrl, Mode=OneWay}"
+                                ToolTip="{Binding ResourceWrapper.uriPWSpecUrl, Mode=OneWay}"
                                 Click="Hyperlink_ReadPWSpec_OnClick">
                                 VisualCrypt Passwords
                             </Hyperlink>
