--- a/Windows Desktop/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
+++ b/Windows Desktop/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
@@ -4,7 +4,6 @@
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
-                    
                     xmlns:controls="clr-namespace:VisualCrypt.Desktop.Controls"
                     mc:Ignorable="d"
                     Title="Set Password" Height="300" Width="500" WindowStartupLocation="CenterOwner"
@@ -28,10 +27,10 @@
                 </Grid.RowDefinitions>
                 <Grid x:Name="ContentRow" Grid.Row="0">
                     <StackPanel HorizontalAlignment="Stretch">
-                        <TextBlock Style="{StaticResource DialogH1Style}" Text="{Binding Title}" />
+                        <TextBlock Style="{StaticResource DialogH1Style}" Text="{Binding Title, Mode=OneWay}" />
                         <DockPanel HorizontalAlignment="Stretch">
-                            <TextBlock HorizontalAlignment="Left">Password/-phrase:</TextBlock>
-                            <TextBlock HorizontalAlignment="Right" Text="{Binding SignificantCharCountText}" />
+                            <TextBlock HorizontalAlignment="Left" Text="{Binding ResourceWrapper.spd_lbl_PasswordOrPhrase, Mode=OneWay}"></TextBlock>
+                            <TextBlock HorizontalAlignment="Right" Text="{Binding SignificantCharCountText, Mode=OneWay}" />
                         </DockPanel>
                         <TextBox Name="PwBox" TextChanged="Password_Changed" x:FieldModifier="private"
                                  AcceptsTab="False"
@@ -40,22 +39,21 @@
                                  AcceptsReturn="True"
                                  Height="70" MaxHeight="70" />
                         <DockPanel HorizontalAlignment="Stretch">
-                        <TextBlock HorizontalAlignment="Left">
-                            <Hyperlink Click="Hyperlink_CreatePassword_OnClick">Generate Password</Hyperlink>
-                            from 256 Bit Random Data.
-                        </TextBlock>
+                            <TextBlock HorizontalAlignment="Left">
+                            <Hyperlink Click="Hyperlink_CreatePassword_OnClick"><Run Text="{Binding ResourceWrapper.spd_linktext_GeneratePassword, Mode=OneWay}"></Run></Hyperlink>
+                            <Run Text="{Binding ResourceWrapper.spd_text_from256BitRD, Mode=OneWay}"></Run>
+                            </TextBlock>
                             <TextBlock HorizontalAlignment="Right">
-                            <Hyperlink Click="Hyperlink_Print_Password_Click">Print Password</Hyperlink>
-                          
+                            <Hyperlink Click="Hyperlink_Print_Password_Click"><Run Text="{Binding ResourceWrapper.spd_linktext_PrintPassword, Mode=OneWay}"></Run></Hyperlink>
+
                             </TextBlock>
                         </DockPanel>
                         <TextBlock />
                         <TextBlock>
-                            Read more about
+                            <Run Text="{Binding ResourceWrapper.spd_text_ReadMoreAbout, Mode=OneWay}"></Run>
                             <Hyperlink
                                 ToolTip="{Binding ResourceWrapper.uriPWSpecUrl, Mode=OneWay}"
-                                Click="Hyperlink_ReadPWSpec_OnClick">
-                                VisualCrypt Passwords
+                                Click="Hyperlink_ReadPWSpec_OnClick"><Run Text="{Binding ResourceWrapper.spd_linktext_VisualCryptPasswords, Mode=OneWay}"></Run>
                             </Hyperlink>
                             .
                         </TextBlock>
@@ -65,10 +63,10 @@
                 </Grid>
                 <Grid x:Name="ButtonRow" Grid.Row="1">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                        <Button Content="Clear" Command="{Binding ClearPasswordCommand}" />
+                        <Button Content="{Binding ResourceWrapper.termClear}" Command="{Binding ClearPasswordCommand}" />
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                        <Button Content="Cancel" Click="Button_Click" />
+                        <Button Content="{Binding ResourceWrapper.termCancel}" Click="Button_Click" />
                         <Button HorizontalAlignment="Right" Content="Set" x:Name="ButtonOk" IsDefault="True"
                                 Command="{Binding SetPasswordCommand}" />
 
