Fix: Change behavior of Clear Password in SetPasswordDialog (make 2 separate functions).

--- a/Windows Desktop/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
+++ b/Windows Desktop/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
@@ -30,9 +30,10 @@
                         <TextBlock Style="{StaticResource DialogH1Style}" Text="{Binding Title, Mode=OneWay}" />
                         <DockPanel HorizontalAlignment="Stretch">
                             <TextBlock HorizontalAlignment="Left" Text="{Binding ResourceWrapper.spd_lbl_PasswordOrPhrase, Mode=OneWay}"></TextBlock>
+        
                             <TextBlock HorizontalAlignment="Right" Text="{Binding SignificantCharCountText, Mode=OneWay}" />
                         </DockPanel>
-                        <TextBox Name="PwBox" TextChanged="Password_Changed" x:FieldModifier="private"
+                        <TextBox Name="PwBox" x:FieldModifier="private"
                                  AcceptsTab="False"
                                  TextWrapping="Wrap"
                                  VerticalScrollBarVisibility="Visible"
@@ -40,6 +41,9 @@
                                  Height="70" MaxHeight="70" />
                         <DockPanel HorizontalAlignment="Stretch">
                             <TextBlock HorizontalAlignment="Left">
+                            <Hyperlink Click="Hyperlink_ClearPWBox_Click" IsEnabled="{Binding IsHyperlinkClearPWBoxEnabled}"><Run Text="{Binding ResourceWrapper.termClear, Mode=OneWay}"></Run></Hyperlink>
+                            </TextBlock>
+                            <TextBlock HorizontalAlignment="Center">
                             <Hyperlink Click="Hyperlink_CreatePassword_OnClick"><Run Text="{Binding ResourceWrapper.spd_linktext_GeneratePassword, Mode=OneWay}"></Run></Hyperlink>
                             <Run Text="{Binding ResourceWrapper.spd_text_from256BitRD, Mode=OneWay}"></Run>
                             </TextBlock>
@@ -54,8 +58,7 @@
                             <Hyperlink
                                 ToolTip="{Binding ResourceWrapper.uriPWSpecUrl, Mode=OneWay}"
                                 Click="Hyperlink_ReadPWSpec_OnClick"><Run Text="{Binding ResourceWrapper.spd_linktext_VisualCryptPasswords, Mode=OneWay}"></Run>
-                            </Hyperlink>
-                            .
+                            </Hyperlink>.
                         </TextBlock>
 
 
@@ -63,7 +66,7 @@
                 </Grid>
                 <Grid x:Name="ButtonRow" Grid.Row="1">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                        <Button Content="{Binding ResourceWrapper.termClear}" Command="{Binding ClearPasswordCommand}" />
+                        <Button Content="{Binding ResourceWrapper.spd_btntext_ClearPWFromMemory}" Command="{Binding ClearPasswordCommand}" />
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                         <Button Content="{Binding ResourceWrapper.termCancel}" Click="Button_Click" />
